fix: layout issue

--- a/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
+++ b/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
@@ -62,7 +62,6 @@
 }
 
 .sticky-column {
-    left: 16px;
+    left: 0px;
     z-index: 3;
-    // background-color: var(--N0);
 }
